--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 450 -
+[2008/03/13] RaX - Committed unfinished database code for items.
+-
+
 - Rev 449 -
 [2008/03/08] Aeomin - Added check to prevent talk to any NPC in zone server...
 -
