--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 453 -
+[2008/03/05] Aeomin - Little optimization for GM command, change all gm command procedure's argument
+into const.
+-
+
 - Rev 452 -
 [2008/03/17] Tsusai - Added Emotion npc function to show emotions from the npc.
 -
