- Rev 456 - [2008/03/25] Aeomin - Forgot Helios.dpr -.-" -

--- a/changelog.txt
+++ b/changelog.txt
@@ -15,7 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
-- Rev 455 -
+- Rev 456 -
+[2008/03/25] Aeomin - Forgot Helios.dpr -.-"
+-
+
+- Rev 455 - BROKEN
 [2008/03/25] Aeomin - Added Mob framework [Mob.pas, MobQueries.pas]
 -
 
