--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 458 -
+[2008/03/25] Aeomin - Misc tweaks. [Remove redundant checks].
+[2008/03/25] Aeomin - Possible fix of reappear of walking glitch [Unclear if memory leak will happen though]
+-
+
 - Rev 457 -
 [2008/03/25] Aeomin - Reverted 1 line of code that made NPC invisible in red 452 [Being.pas]
 -
