--- a/changelog.txt
+++ b/changelog.txt
@@ -15,12 +15,24 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 462 -
+[2008/06/08] Tsusai - Phase 2 for Packet_db.  Loading mechanism updated to have
+ full, unique lists to search through.  No more "can't find it in new, check
+ original".  Each list is "patched" with the next packet version.  Currently
+ using eA's packet db and packet_ver numbers for now.  Packet information is
+ now stored in a TObjectList descendant. [PacketDB.pas]
+[2008/06/08] Tsusai - Phase 2 pt 2, Updated GetPacketLength and
+ SearchPacketListing [TCPServerRoutines.pas & ZoneServer.pas]
+-
+
 - Rev 461 -
-[2008/06/08] Tsusai - Phase 1 of fixing packet_db logic.  Possibly moving to using eA's. [PacketDB.pas]
+[2008/06/08] Tsusai - Phase 1 of fixing packet_db logic.  Possibly moving to
+ using eA's. [PacketDB.pas]
 -
 
 - Rev 460 -
-[2008/03/26] Aeomin - Fixed a memory leak in GM command during finding target character [InterSend.pas]
+[2008/03/26] Aeomin - Fixed a memory leak in GM command during finding target
+ character [InterSend.pas]
 -
 
 - Rev 459 -
@@ -29,7 +41,8 @@ Developers & Contributers
 
 - Rev 458 -
 [2008/03/25] Aeomin - Misc tweaks. [Remove redundant checks].
-[2008/03/25] Aeomin - Possible fix of reappear of walking glitch [Unclear if memory leak will happen though]
+[2008/03/25] Aeomin - Possible fix of reappear of walking glitch [Unclear if
+ memory leak will happen though]
 -
 
 - Rev 457 -
