--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 468 -
+[2008/06/10] Aeomin - Another attemp, concept it bit more clear now; currently, i just make it refuse.
+-
+
 - Rev 467 -
 [2008/06/10] Aeomin - Small attemp to implement character rename (though now only ignore those packets, but true
 behavior of client is a b****)
