--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 474 -
+[2008/06/28] Aeomin - Renamed script function name for open mailbox
+-
+
 - Rev 473 -
 [2008/06/17] Tsusai - Fixed more that were sliding past Linux.  All the Database
  files fixed.
