--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 477 - 
+[2008/07/08] Tsusai - Remove unneeded vars in ZoneServer.
+-
+
 - Rev 476 - (actually July 8th, 2008)
 [2008/06/28] Tsusai - Moved Servers\Zone\PacketDB.pas to Common\Classes\Packets.pas
 [2008/06/28] Tsusai - ZoneServer.SearchPacketListing - Moved to Packets as TPacketDB.
