--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 478 -
+[2008/07/22] Aeomin - Finish up load item definition.
+-
+
 - Rev 477 - 
 [2008/07/08] Tsusai - Remove unneeded vars in ZoneServer.
 -
