--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,12 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 479 -
+[2008/08/09] Aeomin - Able to delete mail now.
+[2008/08/09] Aeomin - Added Delete procedure in MailQueries/MailBox.
+[2008/08/09] Aeomin - Added SendDeleteMailResult,DeleteMail procedure.
+-
+
 - Rev 478 -
 [2008/07/22] Aeomin - Finish up load item definition.
 -
