--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 481 -
+[2008/08/11] Aeomin - Clean up Account.pas
+-
+
 - Rev 480 -
 [2008/08/11] Aeomin - Added InterSendMailNotify [InterSend.pas]
 [2008/08/11] Aeomin - Added RecvZoneNewMailNotify [InterRecv.pas]
