--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 483 -
+[2008/08/11] Aeomin - Moved AChara.SendCharacterStats to bottom of procedure.
+-
+
 - Rev 482 -
 [2008/08/11] Aeomin - Updated game.sql for mysql and sqlite db.
 -
