--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 484 -
+[2008/08/11] Aeomin - Improved bit in GM command.
+-
+
 - Rev 483 -
 [2008/08/11] Aeomin - Moved AChara.SendCharacterStats to bottom of procedure.
 -
