--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 487 -
+[2008/08/11] Aeomin - Fixed a memory leak in GM Commands
+-
+
 - Rev 486 -
 [2008/08/11] Aeomin - Added /recall support, but #recall doesn't work, need improvement.
 -
