--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 499 -
+[2008/09/20] RabidCh - Forgot Version.pas.
+-
+
 - Rev 498 -
 [2008/09/20] RabidCh - Added Hit.
 [2008/09/20] RabidCh - Bonus STR is added to the base, not subtracted.
