- Rev 508 - [2008/09/22] RabidCh - Added MATK. [2008/09/22] RabidCh - Status window is updated after resetting stats. -

--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 508 -
+[2008/09/22] RabidCh - Added MATK.
+[2008/09/22] RabidCh - Status window is updated after resetting stats.
+-
+
 - Rev 507 -
 [2008/09/22] RabidCh - Fixed Flee display.
 [2008/09/22] RabidCh - Status window is updated after increasing stats/level.
