--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 513 -
+[2008/09/24] Aeomin - Now item weight added up & shown.
+-
+
 - Rev 512 -
 [2008/09/24] Spre - Added JobChange Script command, Still needs packets(Started the packet) to change without reloging.
 [2008/09/24] Spre - Added Minimum and Maximum attack to mobqueries. Aswell as attack speed.
