--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 514 -
+[2008/09/24] Aeomin - Forgot to check count..
+-
+
 - Rev 513 -
 [2008/09/24] Aeomin - Now item weight added up & shown.
 -
