--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 515 -
+[2008/09/24] Aeomin - Forgot update weight when add Item
+-
+
 - Rev 514 -
 [2008/09/24] Aeomin - Forgot to check count..
 -
