--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,12 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 522 -
+[2008/09/26] Spre - Added script command JobChange.
+[2008/09/27] RaX - Added sendupdatedlook to zonesend, added arealoopevent JobChange,
+ added gm command #job.
+-
+
 - Rev 521 -
 [2008/09/26] Aeomin - Now shows overweight icon.
 [2008/09/25] Aeomin - Added SendStatusIcon for sending icons on right side.
