--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 527 -
+[2008/09/28] Spre - Updated game.db everything expect mobs are in it.
+-
+
 - Rev 526 -
 [2008/09/28] RabidCh - Spre didn't update the changelog.
 -
