--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 531 -
+[2008/09/28] Aeomin - More preparation for item drop
+[2008/09/28] Aeomin - Fixed internal crash in item.
+-
+
 - Rev 530 -
 [2008/09/28] RaX - Updated Console logging ability, now works like it should.
 -
